bynkc/tests/fixtures/negative/342_oidc_missing_issuer/src/demo.bynk
context demo

type UserId = String where NonEmpty

actor User { auth = Oidc(audience = "my-api", jwks = "https://issuer.example/jwks"), identity = UserId }
